@@ -89,6 +89,13 @@ DBEnv Methods
    <http://www.oracle.com/technology/documentation/berkeley-db/db/
    api_c/env_set_encrypt.html>`__
 
+.. function:: get_encrypt_flags()
+
+   Returns the encryption flags.
+   `More info...
+   <http://www.oracle.com/technology/documentation/berkeley-db/db/
+   api_c/env_set_encrypt.html>`__
+
 .. function:: get_timeout(flags)
 
    Returns a timeout value, in microseconds.
