@@ -5,6 +5,7 @@
     "DB_ENV->mutex_get_increment()".
   * Support for "DB_ENV->mutex_set_tas_spins()" and
     "DB_ENV->mutex_get_tas_spins()".
+  * Support for "DB_ENV->get_encrypt_flags()".
 
 4.8.0:
   * Support for Berkeley DB 4.8.
